<resources>
    <string name="app_name">GameClient</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="login_account_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="choose_pet_completed">就决定是你啦！</string>
    <string name="set_nickname">起个名字吧</string>
    <string name="lets_start">Let\'s start ! </string>
    <string name="OK">OK !</string>
    <string name="shop">商店</string>
    <string name="backpack">背包</string>
    <string name="food">食物</string>
    <string name="toiletries">洗浴用品</string>
    <string name="drug">药品</string>
    <string name="seed">种子</string>
    <string name="fertilizer">肥料</string>
    <string name="purchase">购买</string>
    <string name="purchase_number">购买数量</string>
    <string name="operation">操作</string>
    <string name="harvest">收获</string>
</resources>