<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lanier.gameclient.module.register.RegisterVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.login.LoginAct">

        <View
            android:id="@+id/appIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="64dp"
            android:layout_height="64dp" />

        <EditText
            android:id="@+id/etAccount"
            android:text="@={viewmodel.inputAccount}"
            android:textSize="12sp"
            android:hint="@string/login_account_hint"
            android:maxLines="1"
            android:ellipsize="none"
            android:maxLength="15"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/appIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shape_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <EditText
            android:id="@+id/etPassword"
            android:text="@={viewmodel.inputPassword}"
            android:textSize="12sp"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:ellipsize="none"
            android:maxLength="20"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etAccount"
            app:layout_constraintStart_toStartOf="@id/etAccount"
            app:layout_constraintEnd_toEndOf="@+id/etAccount"
            android:background="@drawable/shape_login_edit_text"
            android:layout_width="0dp"
            android:layout_height="42dp" />

        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:textSize="12sp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etAccount"
            app:layout_constraintEnd_toEndOf="@+id/etAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvBack"
            android:text="@string/back"
            android:textSize="12sp"
            android:textColor="@color/md_theme_primary"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@id/etAccount"
            app:layout_constraintEnd_toEndOf="@+id/etAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>